fix: proper tailwind + postcss production setup

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,97 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BharatForce | Modern HRMS for India</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              // Primary: Indigo Blue #3A5BA0
-              indigo: {
-                50: '#eff6ff',
-                100: '#dbeafe',
-                200: '#bfd3fe',
-                300: '#93bbfd',
-                400: '#609afa',
-                500: '#4d7cfe',
-                600: '#3A5BA0', // Primary Brand
-                700: '#2e4980',
-                800: '#253b66',
-                900: '#1e3a8a',
-                950: '#172554',
-              },
-              // Secondary: Saffron Gold #D68B28 (Mapping to Amber)
-              amber: {
-                50: '#fdfce7',
-                100: '#fdf6e7',
-                200: '#fceec8',
-                300: '#fde047',
-                400: '#facc15',
-                500: '#e89c3a',
-                600: '#D68B28', // Secondary Brand
-                700: '#b5721d',
-                800: '#925a18',
-                900: '#784916',
-                950: '#452509',
-              },
-              // Neutrals
-              slate: {
-                50: '#F3F4F6', // Cool Grey Background
-                100: '#eef0f2',
-                200: '#e2e4e8',
-                300: '#cbd5e1',
-                400: '#94a3b8',
-                500: '#7A7A80', // Steel Grey (Secondary Text)
-                600: '#5d5d63',
-                700: '#47474b',
-                800: '#3A3A3C', // Graphite (Text)
-                900: '#3A3A3C', // Graphite (Text/Sidebar)
-                950: '#252526', // Darker Graphite
-              }
-            }
-          }
-        }
-      }
-    </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-      }
-      /* Custom Scrollbar for Webkit */
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background-color: #CBD5E1;
-        border-radius: 3px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background-color: #94A3B8;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
